--- a/ContactUs.html
+++ b/ContactUs.html
@@ -142,7 +142,8 @@
 
     <!--Footer Section Ends-->
 
-
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </body>
+
 
 </html>
